# llamaburn

./: .env.example  .gitignore  DEPENDENCIES.md  Dockerfile  Dockerfile.dev  Dockerfile.devbase  README.md  README_DEV.md  dev_readme.md  docker-compose.override.yml  docker-compose.yml
agent/: .env.example  Cargo.toml  Dockerfile.dev
agent/crates/agents-core/src/: types.rs  worker.rs
agent/crates/agents-llm/: Cargo.toml
agent/crates/agents-llm/src/: client.rs  lib.rs  ollama.rs
agent/crates/agents-pipeline/src/: evaluator.rs  frontline.rs  orchestrator.rs  prompts.rs  runner.rs
agent/crates/agents-server/src/: dto.rs  error.rs  main.rs  state.rs  ws.rs
agent/crates/agents-server/src/handlers/: mod.rs  model.rs
agent/crates/agents-server/src/services/: model.rs
agent/crates/agents-workers/src/: email.rs  general.rs  registry.rs  search.rs
agent/crates/llamaburn-benchmark/: Cargo.toml
agent/crates/llamaburn-benchmark/src/: code_executor.rs  code_runner.rs  lib.rs  ollama.rs  problem_loader.rs  runner.rs
agent/crates/llamaburn-cli/: Cargo.toml
agent/crates/llamaburn-cli/src/: main.rs
agent/crates/llamaburn-core/: Cargo.toml
agent/crates/llamaburn-core/src/: ai_selector.rs  audio.rs  benchmark_type.rs  code_benchmark.rs  config.rs  error.rs  lib.rs  metrics.rs  model.rs  system.rs
agent/crates/llamaburn-core/src/ai/: mod.rs  types.rs
agent/crates/llamaburn-core/src/audio/: benchmark.rs  benchmark_config.rs  effect_tool.rs  mod.rs  mode.rs  types.rs  whisper_model.rs
agent/crates/llamaburn-core/src/code/: benchmark.rs  benchmark_config.rs  language.rs  mod.rs  types.rs
agent/crates/llamaburn-core/src/history/: types.rs
agent/crates/llamaburn-core/src/text/: benchmark.rs  benchmark_config.rs  mod.rs  types.rs
agent/crates/llamaburn-gui/: Cargo.toml
agent/crates/llamaburn-gui/src/: app.rs  main.rs
agent/crates/llamaburn-gui/src/panels/: benchmark.rs  gpu_monitor.rs  history.rs  mod.rs  setup.rs
agent/crates/llamaburn-gui/src/panels/benchmark/: code.rs  mod.rs  text.rs
agent/crates/llamaburn-gui/src/panels/benchmark/audio/: devices.rs  effects.rs  mod.rs  stt.rs  ui.rs
agent/crates/llamaburn-gui/src/panels/benchmark/code_gen/: config_ui.rs  error_log.rs  execution.rs  history.rs  mod.rs  polling.rs  results_ui.rs  state.rs  util.rs
agent/crates/llamaburn-gui/src/panels/benchmark/components/: mod.rs  model_selector.rs  multi_select.rs  rankings.rs  transport.rs
agent/crates/llamaburn-gui/src/panels/benchmark/text/: config_ui.rs  mod.rs  rankings_ui.rs
agent/crates/llamaburn-server/: Cargo.toml
agent/crates/llamaburn-server/src/: main.rs
agent/crates/llamaburn-services/: Cargo.toml
agent/crates/llamaburn-services/migrations/: V1__initial_schema.sql  V2__settings_table.sql  V3__audio_mode.sql  V4__effect_detection_history.sql  V5__code_language.sql  V6__session_id.sql  V7__batch_state.sql  V8__run_status.sql  V9__presets.sql
agent/crates/llamaburn-services/src/: audio_input.rs  audio_output.rs  benchmark.rs  effect_detection.rs  gpu_monitor.rs  history.rs  io_services.rs  lib.rs  model_info.rs  ollama.rs  services.rs  settings.rs  whisper.rs
agent/crates/llamaburn-services/src/audio_effects/: mod.rs  native.rs
agent/crates/llamaburn-services/src/effects/: mod.rs  native.rs
agent/crates/llamaburn-services/src/runners/: code_executor.rs  code_runner.rs  mod.rs  ollama_client.rs  text_runner.rs
agent/crates/llamaburn-web/: Cargo.toml  index.html  style.css
agent/crates/llamaburn-web/src/: api.rs  app.rs  lib.rs
agent/crates/llamaburn-web/src/components/: gpu_monitor.rs  header.rs  mod.rs  nav.rs
agent/crates/llamaburn-web/src/pages/: benchmark.rs  docs.rs  eval.rs  home.rs  mod.rs  stress.rs
agent/spec/: audio-fx.md
backend/: Cargo.toml  Dockerfile
backend/crates/agents-core/: Cargo.toml
backend/crates/agents-core/src/: error.rs  lib.rs  types.rs  worker.rs
backend/crates/agents-llm/: Cargo.toml
backend/crates/agents-llm/src/: client.rs  lib.rs
backend/crates/agents-pipeline/: Cargo.toml
backend/crates/agents-pipeline/src/: evaluator.rs  frontline.rs  lib.rs  orchestrator.rs  prompts.rs  runner.rs
backend/crates/agents-server/: Cargo.toml
backend/crates/agents-server/src/: main.rs  protocol.rs  state.rs  ws.rs
backend/crates/agents-workers/: Cargo.toml
backend/crates/agents-workers/src/: email.rs  general.rs  lib.rs  prompts.rs  registry.rs  search.rs
client/: Dockerfile  Dockerfile.dev  jsconfig.json  package-lock.json  package.json  vite.config.js
client/.svelte-kit/: ambient.d.ts
client/src/lib/: types.ts
client/src/lib/components/: ChatInput.svelte  ChatMessage.svelte  Header.svelte  Settings.svelte
client/src/lib/stores/: chat.js  chat.ts
client/src/routes/: +page.svelte
docs/: audio_signal_analysis.md
frontend/: Dockerfile  package.json
frontend/src/: app.css
frontend/src/lib/: types.ts
frontend/src/lib/stores/: chat.ts
frontend/src/routes/: +page.svelte
plans/: plan.md
problems/: easy.json  hard.json  medium.json
scripts/effect_detection/: fx_encoder_detect.py  llm2fx_detect.py  openamp_detect.py
spec/: SPEC.md  app-state-refactor.md  architecture.md  audio-benchmarking.md  audio-fx.md  benchmark-enhancements.md  code-cleanup-recommendations.md  live-stt-recording.md  rust-code-violations.md  vector-audio-db.md
