[workspace]
resolver = "2"
members = [
    "crates/llamaburn-core",
    "crates/llamaburn-benchmark",
    "crates/llamaburn-gui",
    "crates/llamaburn-services",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hubenschmidt"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# LlamaBurn crates
llamaburn-core = { path = "crates/llamaburn-core" }
llamaburn-benchmark = { path = "crates/llamaburn-benchmark" }
llamaburn-services = { path = "crates/llamaburn-services" }
