[package]
name = "llamaburn-benchmark"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Benchmark runner for LlamaBurn"

[dependencies]
llamaburn-core = { path = "../llamaburn-core" }
tokio = { workspace = true }
tokio-util = "0.7"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
