[package]
name = "llamaburn-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "llamaburn-gui"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui_extras = { version = "0.29", features = ["all_loaders"] }

# Async runtime
tokio = { workspace = true }
tokio-util = "0.7"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Services
llamaburn-services = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

# LlamaBurn crates
llamaburn-benchmark = { workspace = true }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
open = "5"
rfd = "0.14"
os_pipe = "1.2"
libc = "0.2"
hound = "3.5"
sha2 = "0.10"

