[package]
name = "llamaburn-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Axum server for LlamaBurn web UI"

[[bin]]
name = "llamaburn-server"
path = "src/main.rs"

[dependencies]
llamaburn-core = { path = "../llamaburn-core" }
llamaburn-benchmark = { path = "../llamaburn-benchmark" }
axum = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tokio-stream = "0.1"
tower = { workspace = true }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3"
