[package]
name = "llamaburn-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core types
llamaburn-core = { workspace = true }
llamaburn-benchmark = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = "0.7"

# HTTP client
ureq = { version = "2.10", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Utilities
dirs = "6.0"
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"

# Audio - STT (Whisper)
# Note: Requires cmake and clang to build. Add "hipblas" feature for ROCm GPU support.
# Install deps: sudo apt install cmake clang
whisper-rs = { version = "0.15", optional = true }
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "flac", "aac"] }
rubato = "0.15"

[features]
default = []
whisper = ["whisper-rs"]
whisper-gpu = ["whisper", "whisper-rs/hipblas"]
