[package]
name = "llamaburn-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core types
llamaburn-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = "0.7"
futures = "0.3"

# HTTP clients
ureq = { version = "2.10", features = ["json"] }
reqwest = { workspace = true }

# Code execution
tempfile = "3.10"
regex = "1.10"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Utilities
dirs = "6.0"
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"

# Audio - STT (Whisper)
# Note: Requires cmake and clang to build.
# Install deps: sudo apt install cmake clang
# hipblas feature enables ROCm GPU support
whisper-rs = { version = "0.15", features = ["hipblas"] }
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "flac", "aac"] }
rubato = "0.15"

# Audio input (microphone capture)
# Requires libasound2-dev on Linux
cpal = "0.15"
ringbuf = "0.4"

# Audio effects / DSP
fundsp = "0.18"
