[package]
name = "llamaburn-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Leptos web UI for LlamaBurn"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
llamaburn-core = { path = "../llamaburn-core" }
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "EventSource",
    "MessageEvent",
] }
console_error_panic_hook = "0.1"
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
