[package]
name = "agents-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
agents-core.workspace = true
agents-llm.workspace = true
agents-workers.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
