[package]
name = "agents-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agents-server"
path = "src/main.rs"

[dependencies]
agents-core.workspace = true
agents-llm.workspace = true
agents-workers.workspace = true
agents-pipeline.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
dotenvy.workspace = true
uuid.workspace = true
anyhow.workspace = true
futures = "0.3"
