[package]
name = "agents-workers"
version.workspace = true
edition.workspace = true

[dependencies]
agents-core.workspace = true
agents-llm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true
urlencoding = "2.1"
